Hidden/Visibility fix

--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,6 @@ ul .nav-button:first-of-type {
 
 #previous,
 #next {
-	visibility: hidden;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -109,7 +108,7 @@ ul .nav-button:first-of-type {
 }
 
 #flashcard {
-	visibility: hidden;
+
 }
 
 .card {
@@ -133,7 +132,6 @@ ul .nav-button:first-of-type {
 }
 
 .response-container {
-	visibility: hidden;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -167,7 +165,6 @@ ul .nav-button:first-of-type {
 /* == SCOREBOARD ASIDE == */
 
 #scoreboard {
-	visibility: hidden;
 	margin: 1em;
 	border-top: 1px solid #fff;
 	border-bottom: 1px solid #fff;
@@ -226,6 +223,20 @@ ul .nav-button:first-of-type {
 
 .overview-value {
 	max-width: 224px;
+}
+
+
+
+/* == EDIT DECKS == */
+.edit-container {
+
+}
+
+
+
+/* == HELPERS == */
+.hidden {
+	display: none !important;
 }
 
 /*
